Session-API: add meta in ChannelTemplate
